Grace/tests/gibbs/errors/t300.grace
// ERROR = P1018
object {
    inherit .
    method foo {}
}
